--- a/style.css
+++ b/style.css
@@ -1,113 +1,70 @@
-body {
-  background-color: #f5f5f5;
+* {
+  margin: 0;
+  padding: 0;
 }
-#form {
-  height: 666px;
-  width: 508px;
-  margin: 20vh auto 0 auto;
-  padding: 20px;
-  background-color: white;
-  border-radius: 4px;
-  font-size: 12px;
-}
-#form h1 {
-  color: #5d5fef;
-  text-align: center;
-  font-size: 48px;
-}
-#form h2 {
-  color: #5d5fef;
-  text-align: start;
-  font-size: 20px;
-}
-#form button {
-  padding: 10px;
-  margin-top: 27px;
-  width: 90%;
-  color: white;
-  background-color: #5d5fef;
-  border: none;
-  border-radius: 4px;
-}
-
-.input-control {
-  display: flex;
-  flex-direction: column;
-  height: 50px;
-  width: 428px;
-  border-radius: 8px;
-}
-
-.input-control input {
-  height: 50px;
-  border: 2px solid #f0f0f0;
-  border-radius: 4px;
-  display: block;
-  font-size: 12px;
-  padding: 10px;
+.game {
   width: 100%;
-}
-::placeholder {
-  position: absolute;
-  margin-left: 1px;
-  margin-top: 2px;
-}
-.icon {
-  position: absolute;
-  margin-top: 15px;
-  height: 10px;
-  width: 10px;
-  color: #5d5fef;
+  height: 400px;
+
+  margin-top: 200px;
 }
 
-.input-control input:focus {
-  outline: 0;
+#dinosaur {
+  height: 62px;
+  width: 56px;
+  position: relative;
+  top: 320px;
+  left: 120px;
+  margin-left: 12px;
+}
+.dinosaurImg {
+  height: 100px;
+  width: 100px;
+}
+.jump {
+  animation: jump 0.9s linear;
+}
+@keyframes jump {
+  0% {
+    top: 320px;
+  }
+
+  50% {
+    top: 30px;
+  }
+  80% {
+    top: 200px;
+  }
+  100% {
+    top: 320px;
+  }
 }
 
-.input-control.success input {
-  border-color: #09c372;
-}
-
-.input-control.error input {
-  border-color: #ff3860;
-}
-
-.input-control .error {
-  color: blue;
-  font-size: 9px;
-  height: 13px;
-}
-
-.mainBorder {
-  display: flex;
-  flex-direction: row;
-  gap: 12px;
-}
-.border {
-  display: flex;
-  border: 1px solid #dadada;
-  border-radius: 5px;
+#cactus {
+  width: 40px;
   height: 50px;
-  width: 141px;
-  justify-content: center;
-  align-items: center;
-  border-radius: 8px;
+  position: relative;
+  top: 190px;
+  left: 660px;
+
+  animation: blockOfGameMovement 2s linear infinite;
 }
-label {
-  font-size: 20px;
-  text-align: center;
-  color: #5d5fef;
+.cactusImg {
+  height: 170px;
+  width: 150px;
 }
-#labelN {
-  display: none;
+.floor {
+  background-color: grey;
+  height: 5px;
+  width: 100%;
+  margin-top: 310px;
 }
-.input-contro2 {
-  display: none;
-}
-#country {
-  height: 50px;
-  width: 450px;
-  margin-top: 10px;
-  border-radius: 8px;
-  border-color: #dadada;
+
+@keyframes blockOfGameMovement {
+  0% {
+    left: 100%;
+  }
+  100% {
+    left: 0;
+  }
 }
